[package]
name = "mlua-test"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11.6", features = ["async", "lua55", "vendored", "serialize"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "time", "signal"] }
rusqlite = "0.33.0"
uuid = { version = "1.21.0", features = ["v4"] }
minreq = { version = "2.13.0", features = ["https-native"] }
serde_json = "1.0.149"
axum = { version = "0.8.1", default-features = false, features = ["http1", "query", "tokio", "json"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
axum-server = { version = "0.7.1", default-features = false, features = ["tls-openssl"] }
rustls-pemfile = "2.2.0"
croner = "3.0.1"
chrono = { version = "0.4", features = ["clock"] }
futures = "0.3.32"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
