[package]
name = "mlua-test"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11.6", features = ["async", "lua55", "vendored", "serialize"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "http2", "charset", "form", "query"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.149"
axum = "0.8.1"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
rustls-pemfile = "2.2.0"
notify-debouncer-mini = "0.6.0"
futures = "0.3.32"
tokio-cron-scheduler = "0.15.1"
url = "2.5.4"
jsonwebtoken = "9.3.0"
rsa = "0.9.6"
pkcs8 = { version = "0.10.2", features = ["pem", "std"] }
dirs = "6.0.0"
chrono = "0.4.39"
base64 = "0.22.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
