[package]
name = "mlua-test"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11.6", features = ["async", "lua55", "vendored", "serialize"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "time", "sync", "signal"] }
rusqlite = "0.33.0"
chrono = { version = "0.4.39", features = ["serde", "clock"] }
uuid = { version = "1.21.0", features = ["v4"] }
minreq = { version = "2.13.0", features = ["https-native"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.149"
axum = { version = "0.8.1", default-features = false, features = ["http1", "query", "tokio", "json"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
axum-server = { version = "0.7.1", default-features = false, features = ["tls-openssl"] }
rustls-pemfile = "2.2.0"
croner = "3.0.1"
futures = "0.3.32"
tokio-cron-scheduler = "0.15.1"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
urlencoding = "2.1.3"
url = "2.5.4"
jsonwebtoken = "9.3.0"
rsa = "0.9.6"
pkcs8 = { version = "0.10.2", features = ["pem", "std"] }
dirs = "6.0.0"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
