[package]
name = "rua-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rua"
path = "src/main.rs"

[dependencies]
rua = { path = "../rua" }
rua-resty-http = { path = "../rua-resty-http" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
